# self-driving-car

./: .gitignore  Makefile  README.md  car.cpp  car.h  client.py  controls.cpp  controls.h  data_processor.py  main  main.cpp  min_y_values.json  model_manager.py  network.py  network_client.py  ppclient.py  test.py
include/: car.h  car2.h  controls.h  road.h  sensor.h  server.h  utils.h
phase_1/: client2.py  main.py  model_manager.py  network.py  network_client.py
phase_2/: CMakeLists.txt  Makefile
phase_2/ext/imgui/: CMakeLists.txt
phase_2/include/: graph.h  graph_editor.h  point.h  segment.h  viewport.h  world.h
phase_2/include/editors/: crossing_editor.h  graph_editor.h  light_editor.h  marking_editor.h  parking_editor.h  start_editor.h  stop_editor.h  target_editor.h  yield_editor.h
phase_2/include/items/: building.h  drawable_object.h  tree.h
phase_2/include/markings/: crossing.h  light.h  marking.h  parking.h  start.h  stop.h  target.h  yield.h
phase_2/include/math/: graph.h  utils.h
phase_2/include/primitives/: envelope.h  point.h  polygon.h  segment.h
phase_2/include/utils/: button.h
phase_2/src/: graph.cpp  graph_editor.cpp  main.cpp  point.cpp  segment.cpp  viewport.cpp  world.cpp
phase_2/src/editors/: graph_editor.cpp
phase_2/src/items/: building.cpp  tree.cpp
phase_2/src/math/: graph.cpp  utils.cpp
phase_2/src/primitives/: envelope.cpp  point.cpp  polygon.cpp  segment.cpp
phase_2/src/utils/: button.cpp
saved_models/: 1  10  100  11  12  13  14  15  16  17  18  19  2  20  21  22  23  24  25  26  27  28  29  3  30  31  32  33  34  (+71 more)
(+18 files in other folders)
